<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orunav2_smac_planner</name>
  <version>0.0.1</version>
 <description>Smac global planning plugin: A*, Spline, State Lattice</description>
  <maintainer email="paolo.forte@oru.se">Paolo Forte</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>nav2_common</depend>
  <depend>nav2_smac_planner</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>orunav2_core</depend>
  <depend>pluginlib</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>ompl</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>angles</depend>
  <depend>orunav2_msgs</depend>
  <depend>orunav2_generic</depend>
  <depend>orunav_rviz</depend>
  <depend>orunav2_conversions</depend>
  <depend>orunav_geometry</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <orunav2_core plugin="${prefix}/smac_plugin_astar.xml" />
    <orunav2_core plugin="${prefix}/smac_plugin_lattice.xml" />
  </export>
</package>
