<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orunav_fork_control</name>
  <version>0.0.1</version>
  <description>The orunav_fork_control package</description>
  <maintainer email="paolo.forte@oru.com">Paolo Forte</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
	
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>orunav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>orunav2_generic</depend>
  <depend>orunav_rviz</depend>
  <depend>eigen</depend>
  <depend>boost</depend>	
	
	
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
